[workspace]
members = [
    "runner",
    "rust_tests",
    "tests_api",
    "std_stuff",
    # "cpp_tests_build",
    # "cpp_tests_build",
]

resolver = "2"

[workspace.dependencies]
tests_api = { path = "tests_api" }
std_stuff = { path = "std_stuff" }
rust_tests = { path = "rust_tests" }
# cpp_tests_build = { path = "cpp_tests_build" }
slab = { path = "slab" }

anyhow = "1"
libloading = "0.8.3"
slotmap = "1"
ascii_table = "4"
clap = { version = "4", features = ["derive"] }
cbindgen = "0.26.0"
# stats_alloc = { version = "0.1.10", features = ["nightly"] }
humansize = "2"
snmalloc-sys = "0.3.5"
indexmap = "2"
hashbrown = { version = "0.14.5", features = ["nightly"] }
stacker = "0.1.15"

[profile.release]
lto = "thin"
panic = "abort"
debug = true


[patch.crates-io]
slotmap = { path = "slotmap" }
snmalloc-sys = { path = "snmalloc-rs/snmalloc-sys" }
